# OmgoDonut

./: README.md  pyproject.toml
src/: main(thonny).py  main.py
src/camera/: main.py
src/microcontroller/: main.py
